<resources>
    <string name="app_name">MyFridge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_food">Add Food</string>
    <string name="welcome">Welcome to MyFridge App</string>
    <string name="contact_us">Contact Us</string>
    <string name="to_fridge_choice">To Fridge Choice</string>
    <string name="send_email_request">Send us an Email</string>
    <string name="review_request">Leave us a review!</string>
    <string name="to_food_list">To Food List</string>
    <string name="back_to_food_list">back to food list</string>
    <string name="to_add_fridge">to add fridge</string>
    <string name="insert_fridge_name">Insert Fridge Name</string>
    <string name="fridge_name">Fridge Name</string>
    <string name="add_fridge">Add Fridge</string>
    <string name="add_food_button_content_description">Add Food Button</string>
    <string name="add_a_new_fridge">Add a new Fridge</string>
    <string name="food_name">Food Name</string>
    <string name="insert_food_name">Insert food Name</string>
    <string name="choose_expiration_date">Choose Expiration Date</string>
    <string name="choose_food_icon">Choose Food Icon</string>
    <string name="add_this_food_to_your_fridge">Add this food to your fridge!</string>
    <string name="single_icon">Single Icon</string>
    <string name="expiration_feedback">%s</string>
    <string name="selected_date">Selected Date:</string>
    <string name="remove_fridge">remove fridge</string>
    <string name="remove_food">Remove Food</string>
    <string name="delete_user">DELETE USER</string>
    <string name="background_hills">Background Hills</string>
</resources>